--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
 
 <div class="row" *ngIf="weather">
   <div class="column" *ngFor="let w of weather.list">
-    <p-card [header]="w.main.temp" [subheader]="getDate(w.dt_txt)" [style]="{width: '400px'}" c styleClass="p-card-shadow">
-      <span><b>Feels Like:</b> {{w.main.temp}} | <b>Humidity:</b> {{w.main.humidity}}</span>
+    <p-card [header]="w.main.temp" [subheader]="getDate(w.dt_txt)"  class="card1" styleClass="p-card-shadow">
+      <span><b>Feels Like:</b> {{w.main.feels_like}} | <b>Humidity:</b> {{w.main.humidity}}</span>
       <ng-template pTemplate="footer" *ngFor="let a of w.weather">
         <span class="custom-font">{{a.description}}</span> 
       </ng-template>
