--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,11 @@
 .center {
-    display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
     margin-top:5%;
+    margin-bottom:5%;
     border: 1px solid #737e84;
     border-radius: 10px;
     padding: 30px;
-    font-size: 16px;
 }
 .custom-button {
     margin: 8px;
@@ -17,26 +15,4 @@
 }
 .custom-font {
     font-size: 20px;
-}
-.p-card {
-    background: #c1dcea !important;
-}
-.card1 {
-    background: black;
-}
-
-.column {
-    float: left;
-    width: 25%;
-    padding: 10px;
-}
-  
-.row {
-   margin: 20px -5px;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
 }
